Update services pages (restore 16, remove 11/12)

--- a/en/index.html
+++ b/en/index.html
@@ -72,15 +72,15 @@
                         </div>
                         <h3>Installation</h3>
                         <p>gutter systems, flashings, glazing systems, and more</p>
-                        <a href="/en/our-services/" class="card-link">learn more</a>
+                        <a href="/en/montage/" class="card-link">learn more</a>
                     </div>
                     <div class="service-item">
                         <div class="service-img">
-                            <img src="/img/remont.png" alt="Repair" loading="lazy">
+                            <img src="/img/cleaning.jpg" alt="Cleaning" loading="lazy">
                         </div>
-                        <h3>Repair</h3>
-                        <p>chimneys, grain elevators, silos, and more</p>
-                        <a href="/en/our-services/" class="card-link">learn more</a>
+                        <h3>Cleaning</h3>
+                        <p>Washing windows, facades and other surfaces.</p>
+                        <a href="/en/service-15/" class="card-link">learn more</a>
                     </div>
                     <div class="service-item">
                         <div class="service-img">
@@ -89,15 +89,15 @@
                         <h3>Solar panel installation</h3>
                         <p>We’ll help you choose everything needed for effective solar energy use. Turnkey
                         </p>
-                        <a href="/en/our-services/" class="card-link">learn more</a>
+                        <a href="/en/service-16/" class="card-link">learn more</a>
                     </div>
                     <div class="service-item">
                         <div class="service-img">
-                            <img src="/img/cleaning.jpg" alt="Cleaning" loading="lazy">
+                            <img src="/img/remont.png" alt="Repair" loading="lazy">
                         </div>
-                        <h3>Cleaning</h3>
-                        <p>Washing windows, facades and other surfaces.</p>
-                        <a href="/en/our-services/" class="card-link">learn more</a>
+                        <h3>Repair</h3>
+                        <p>chimneys, grain elevators, silos, and more</p>
+                        <a href="/en/repair/" class="card-link">learn more</a>
                     </div>
                     <div class="service-item">
                         <div class="service-img">
@@ -105,7 +105,7 @@
                         </div>
                         <h3>Roof cleaning</h3>
                         <p>From snow, icicles, leaves and other debris.</p>
-                        <a href="/en/our-services/" class="card-link">learn more</a>
+                        <a href="/en/service-14/" class="card-link">learn more</a>
                     </div>
                     <div class="service-item">
                         <div class="service-img">
@@ -113,7 +113,7 @@
                         </div>
                         <h3>Steel structure painting</h3>
                         <p>Improves appearance and protects against corrosion.</p>
-                        <a href="/en/our-services/" class="card-link">learn more</a>
+                        <a href="/en/service-08/" class="card-link">learn more</a>
                     </div>
                 </div>
                 <div class="section-actions">
@@ -306,13 +306,7 @@
                                 +380 73 126 5006
                             </a>
                         </li>
-                        <li>
-                            <a class="footer-link" href="mailto:roofexpertlv@gmail.com">
-                                <span class="footer-icon" aria-hidden="true">✉</span>
-                                roofexpertlv@gmail.com
-                            </a>
-                        </li>
-                    </ul>
+</ul>
                 </div>
 
                 <nav class="footer-col footer-nav" aria-label="Pages">
