--- a/en/our-services.html
+++ b/en/our-services.html
@@ -86,9 +86,9 @@
                         <h3 class="services-catalog-title">Grain elevator overhaul: silo cleaning & repair</h3>
                     </a>
 
-                    <a class="services-catalog-card" role="listitem" href="/en/service-06/" aria-label="Roof installation & repair">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-06/" aria-label="Roof repair & painting">
                         <div class="services-catalog-num">06</div>
-                        <h3 class="services-catalog-title">Roof installation & repair</h3>
+                        <h3 class="services-catalog-title">Roof repair & painting</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/en/service-07/" aria-label="Gutters, flashings & snow-melting systems">
                         <div class="services-catalog-num">07</div>
@@ -105,14 +105,6 @@
                     <a class="services-catalog-card" role="listitem" href="/en/service-10/" aria-label="Translucent structures installation">
                         <div class="services-catalog-num">10</div>
                         <h3 class="services-catalog-title">Translucent structures installation</h3>
-                    </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-11/" aria-label="Sandwich panels & profiled sheet installation">
-                        <div class="services-catalog-num">11</div>
-                        <h3 class="services-catalog-title">Sandwich panels & profiled sheet installation</h3>
-                    </a>
-                    <a class="services-catalog-card" role="listitem" href="/en/service-12/" aria-label="Thermal insulation for buildings & apartments">
-                        <div class="services-catalog-num">12</div>
-                        <h3 class="services-catalog-title">Thermal insulation for buildings & apartments</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/en/service-13/" aria-label="Advertising structures & banner installation">
                         <div class="services-catalog-num">13</div>
@@ -182,13 +174,7 @@
                                 +380 73 126 5006
                             </a>
                         </li>
-                        <li>
-                            <a class="footer-link" href="mailto:roofexpertlv@gmail.com">
-                                <span class="footer-icon" aria-hidden="true">✉</span>
-                                roofexpertlv@gmail.com
-                            </a>
-                        </li>
-                    </ul>
+</ul>
                 </div>
 
                 <nav class="footer-col footer-nav" aria-label="Pages">
