--- a/en/repair.html
+++ b/en/repair.html
@@ -1,16 +1,16 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sandwich panels & profiled sheet installation — alpiK</title>
+    <title>Repair works — alpiK</title>
     <link rel="stylesheet" href="/style.css">
 <!-- i18n-seo:start -->
-<link rel="canonical" href="https://alpik.com.ua/en/service-11/">
-<link rel="alternate" hreflang="uk" href="https://alpik.com.ua/service-11/">
-<link rel="alternate" hreflang="en" href="https://alpik.com.ua/en/service-11/">
-<link rel="alternate" hreflang="x-default" href="https://alpik.com.ua/service-11/">
+<link rel="canonical" href="https://alpik.com.ua/en/repair/">
+<link rel="alternate" hreflang="uk" href="https://alpik.com.ua/repair/">
+<link rel="alternate" hreflang="en" href="https://alpik.com.ua/en/repair/">
+<link rel="alternate" hreflang="x-default" href="https://alpik.com.ua/repair/">
 <!-- i18n-seo:end -->
 </head>
 
@@ -28,6 +28,7 @@
                         <li><a href="/en/">Home</a></li>
                         <li><a href="/en/about/">About</a></li>
                         <li><a href="/en/our-services/">Services</a></li>
+                        <!--<li><a href="/en/our-projects/">Projects</a></li>-->
                         <li><a href="/en/contacts/">Contacts</a></li>
                     </ul>
                 </nav>
@@ -39,6 +40,7 @@
                 <li><a href="/en/">Home</a></li>
                 <li><a href="/en/about/">About</a></li>
                 <li><a href="/en/our-services/">Services</a></li>
+                <!--<li><a href="/en/our-projects/">Projects</a></li>-->
                 <li><a href="/en/contacts/">Contacts</a></li>
             </ul>
         </nav>
@@ -47,13 +49,13 @@
     <div class="main-header-spacer"></div>
 
     <main>
-        <section class="hero-block" aria-label="Service">
-            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('img/11.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
+        <section class="hero-block" aria-label="Repair works">
+            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/2.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
-                <div class="hero-kicker">Service 11</div>
-                <h1 class="hero-title">Sandwich panels & profiled sheet installation</h1>
+                <div class="hero-kicker">Service</div>
+                <h1 class="hero-title">Repair works</h1>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
-                <p class="hero-subtitle">Fast installation of wall and roof enclosures with accurate geometry and sealing.</p>
+                <p class="hero-subtitle">We perform repair and restoration works at height: facades, chimney stacks, silos, roofs and other elements.</p>
                 <div class="hero-actions">
                     <a href="/en/our-services/" class="hero-btn hero-btn-outline">ALL SERVICES</a>
                     <a href="/en/contacts/" class="hero-btn hero-btn-fill">REQUEST A CONSULTATION</a>
@@ -61,15 +63,32 @@
             </div>
         </section>
 
-        <section class="service-details" aria-label="Service details">
+        <section class="services-catalog-section" aria-label="Repair services">
             <div class="container">
-                <h2 class="section-title">11. Sandwich panels & profiled sheet installation</h2>
-                <div class="service-prose">
-                    <p>We install sandwich panels and profiled sheet metal for walls and roofs on industrial and commercial objects.</p>
-                    <p>We ensure correct alignment, fasteners and sealing of joints, including junctions, corners and penetrations for durability and airtightness.</p>
-                </div>
-                <div class="section-actions">
-                    <a href="/en/contacts/" class="btn">Contact us</a>
+                <h2 class="section-title">Repair services</h2>
+                <p class="services-catalog-lead">Choose the type of repair — we’ll recommend the best approach and provide an estimate.</p>
+
+                <div class="services-catalog" role="list">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-01/" aria-label="Facade repair, finishing, cladding, painting & hydrophobic protection">
+                        <div class="services-catalog-num">01</div>
+                        <h3 class="services-catalog-title">Facade repair, finishing, cladding, painting & hydrophobic protection</h3>
+                    </a>
+                    <a class="services-catalog-card" role="listitem" href="/en/service-02/" aria-label="Chimney stack repair & modernization">
+                        <div class="services-catalog-num">02</div>
+                        <h3 class="services-catalog-title">Chimney stack repair & modernization</h3>
+                    </a>
+                    <a class="services-catalog-card" role="listitem" href="/en/service-05/" aria-label="Grain elevator overhaul: silo cleaning & repair">
+                        <div class="services-catalog-num">05</div>
+                        <h3 class="services-catalog-title">Grain elevator overhaul: silo cleaning & repair</h3>
+                    </a>
+                    <a class="services-catalog-card" role="listitem" href="/en/service-06/" aria-label="Roof repair & painting">
+                        <div class="services-catalog-num">06</div>
+                        <h3 class="services-catalog-title">Roof repair & painting</h3>
+                    </a>
+                    <a class="services-catalog-card" role="listitem" href="/en/service-17/" aria-label="Sealing interpanel joints">
+                        <div class="services-catalog-num">17</div>
+                        <h3 class="services-catalog-title">Sealing interpanel joints</h3>
+                    </a>
                 </div>
             </div>
         </section>
@@ -113,12 +132,6 @@
                                 +380 73 126 5006
                             </a>
                         </li>
-                        <li>
-                            <a class="footer-link" href="mailto:roofexpertlv@gmail.com">
-                                <span class="footer-icon" aria-hidden="true">✉</span>
-                                roofexpertlv@gmail.com
-                            </a>
-                        </li>
                     </ul>
                 </div>
 
@@ -128,6 +141,7 @@
                         <li><a class="footer-link" href="/en/">Home</a></li>
                         <li><a class="footer-link" href="/en/about/">About</a></li>
                         <li><a class="footer-link" href="/en/our-services/">Services</a></li>
+                        <!--<li><a class="footer-link" href="/en/our-projects/">Projects</a></li>-->
                         <li><a class="footer-link" href="/en/contacts/">Contacts</a></li>
                     </ul>
                 </nav>
@@ -168,4 +182,3 @@
 </body>
 
 </html>
-
