--- a/en/solar-panels.html
+++ b/en/solar-panels.html
@@ -1,16 +1,16 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thermal insulation for buildings & apartments — alpiK</title>
+    <title>Solar panel installation — alpiK</title>
     <link rel="stylesheet" href="/style.css">
 <!-- i18n-seo:start -->
-<link rel="canonical" href="https://alpik.com.ua/en/service-12/">
-<link rel="alternate" hreflang="uk" href="https://alpik.com.ua/service-12/">
-<link rel="alternate" hreflang="en" href="https://alpik.com.ua/en/service-12/">
-<link rel="alternate" hreflang="x-default" href="https://alpik.com.ua/service-12/">
+<link rel="canonical" href="https://alpik.com.ua/en/solar-panels/">
+<link rel="alternate" hreflang="uk" href="https://alpik.com.ua/solar-panels/">
+<link rel="alternate" hreflang="en" href="https://alpik.com.ua/en/solar-panels/">
+<link rel="alternate" hreflang="x-default" href="https://alpik.com.ua/solar-panels/">
 <!-- i18n-seo:end -->
 </head>
 
@@ -28,6 +28,7 @@
                         <li><a href="/en/">Home</a></li>
                         <li><a href="/en/about/">About</a></li>
                         <li><a href="/en/our-services/">Services</a></li>
+                        <!--<li><a href="/en/our-projects/">Projects</a></li>-->
                         <li><a href="/en/contacts/">Contacts</a></li>
                     </ul>
                 </nav>
@@ -39,6 +40,7 @@
                 <li><a href="/en/">Home</a></li>
                 <li><a href="/en/about/">About</a></li>
                 <li><a href="/en/our-services/">Services</a></li>
+                <!--<li><a href="/en/our-projects/">Projects</a></li>-->
                 <li><a href="/en/contacts/">Contacts</a></li>
             </ul>
         </nav>
@@ -48,12 +50,12 @@
 
     <main>
         <section class="hero-block" aria-label="Service">
-            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('img/12.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
+            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/16.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
-                <div class="hero-kicker">Service 12</div>
-                <h1 class="hero-title">Thermal insulation for buildings & apartments</h1>
+                <div class="hero-kicker">Service</div>
+                <h1 class="hero-title">Solar panel installation</h1>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
-                <p class="hero-subtitle">We select materials and insulation technology with heat engineering and durability in mind.</p>
+                <p class="hero-subtitle">We select the right solution for your site and install solar panels on roofs and structures: mounting, layout and neat wiring.</p>
                 <div class="hero-actions">
                     <a href="/en/our-services/" class="hero-btn hero-btn-outline">ALL SERVICES</a>
                     <a href="/en/contacts/" class="hero-btn hero-btn-fill">REQUEST A CONSULTATION</a>
@@ -63,10 +65,14 @@
 
         <section class="service-details" aria-label="Service details">
             <div class="container">
-                <h2 class="section-title">12. Thermal insulation for buildings & apartments</h2>
+                <h2 class="section-title">What’s included</h2>
                 <div class="service-prose">
-                    <p>We provide end‑to‑end insulation solutions for residential and industrial buildings. We use modern insulation materials such as mineral wool, EPS and polyurethane systems.</p>
-                    <p>Works follow vapor and waterproofing requirements to ensure a comfortable indoor climate and reduced energy consumption.</p>
+                    <ul>
+                        <li>Site review and solution selection</li>
+                        <li>Mounting rails and panels</li>
+                        <li>Neat cable routing</li>
+                        <li>Consultation and estimate</li>
+                    </ul>
                 </div>
                 <div class="section-actions">
                     <a href="/en/contacts/" class="btn">Contact us</a>
@@ -113,12 +119,6 @@
                                 +380 73 126 5006
                             </a>
                         </li>
-                        <li>
-                            <a class="footer-link" href="mailto:roofexpertlv@gmail.com">
-                                <span class="footer-icon" aria-hidden="true">✉</span>
-                                roofexpertlv@gmail.com
-                            </a>
-                        </li>
                     </ul>
                 </div>
 
@@ -128,6 +128,7 @@
                         <li><a class="footer-link" href="/en/">Home</a></li>
                         <li><a class="footer-link" href="/en/about/">About</a></li>
                         <li><a class="footer-link" href="/en/our-services/">Services</a></li>
+                        <!--<li><a class="footer-link" href="/en/our-projects/">Projects</a></li>-->
                         <li><a class="footer-link" href="/en/contacts/">Contacts</a></li>
                     </ul>
                 </nav>
@@ -168,4 +169,3 @@
 </body>
 
 </html>
-
