--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
                         </div>
                         <h3>Монтаж</h3>
                         <p>водостічних систем, відливів, світлопрозорих конструкцій, тощо</p>
-                        <a href="/our-services/" class="card-link">детальніше</a>
+                        <a href="/montage/" class="card-link">детальніше</a>
                     </div>
                     <div class="service-item">
                         <div class="service-img">
-                            <img src="/img/remont.png" alt="Ремонт" loading="lazy">
+                            <img src="/img/cleaning.jpg" alt="Клінінг" loading="lazy">
                         </div>
-                        <h3>Ремонт</h3>
-                        <p>димових труб, елеваторів, силосів, тощо</p>
-                        <a href="/our-services/" class="card-link">детальніше</a>
+                        <h3>Клінінг</h3>
+                        <p>Миття вікон, фасадів та інших поверхонь.</p>
+                        <a href="/service-15/" class="card-link">детальніше</a>
                     </div>
                     <div class="service-item">
                         <div class="service-img">
@@ -89,15 +89,15 @@
                         <h3>Встановлення сонячних панелей</h3>
                         <p>Допоможемо підібрати все необхідне для ефективного використання сонячної енергії. Під ключ
                         </p>
-                        <a href="/our-services/" class="card-link">детальніше</a>
+                        <a href="/service-16/" class="card-link">детальніше</a>
                     </div>
                     <div class="service-item">
                         <div class="service-img">
-                            <img src="/img/cleaning.jpg" alt="Клінінг" loading="lazy">
+                            <img src="/img/remont.png" alt="Ремонт" loading="lazy">
                         </div>
-                        <h3>Клінінг</h3>
-                        <p>Миття вікон, фасадів та інших поверхонь.</p>
-                        <a href="/our-services/" class="card-link">детальніше</a>
+                        <h3>Ремонт</h3>
+                        <p>димових труб, елеваторів, силосів, тощо</p>
+                        <a href="/repair/" class="card-link">детальніше</a>
                     </div>
                     <div class="service-item">
                         <div class="service-img">
@@ -105,7 +105,7 @@
                         </div>
                         <h3>Очищення дахів</h3>
                         <p>Від снігу, борульок, листя та інших забруднень.</p>
-                        <a href="/our-services/" class="card-link">детальніше</a>
+                        <a href="/service-14/" class="card-link">детальніше</a>
                     </div>
                     <div class="service-item">
                         <div class="service-img">
@@ -113,7 +113,7 @@
                         </div>
                         <h3>Фарбування металоконструкцій</h3>
                         <p>Покращення зовнішнього вигляду та захист від корозії.</p>
-                        <a href="/our-services/" class="card-link">детальніше</a>
+                        <a href="/service-08/" class="card-link">детальніше</a>
                     </div>
                 </div>
                 <div class="section-actions">
@@ -322,13 +322,7 @@
                                 +380 73 126 5006
                             </a>
                         </li>
-                        <li>
-                            <a class="footer-link" href="mailto:roofexpertlv@gmail.com">
-                                <span class="footer-icon" aria-hidden="true">✉</span>
-                                roofexpertlv@gmail.com
-                            </a>
-                        </li>
-                    </ul>
+</ul>
                 </div>
 
                 <nav class="footer-col footer-nav" aria-label="Категорії">
