--- a/montage.html
+++ b/montage.html
@@ -1,16 +1,16 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="uk">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Монтаж сендвіч-панелей і профлиста — alpiK</title>
+    <title>Монтажні роботи — alpiK</title>
     <link rel="stylesheet" href="/style.css">
 <!-- i18n-seo:start -->
-<link rel="canonical" href="https://alpik.com.ua/service-11/">
-<link rel="alternate" hreflang="uk" href="https://alpik.com.ua/service-11/">
-<link rel="alternate" hreflang="en" href="https://alpik.com.ua/en/service-11/">
-<link rel="alternate" hreflang="x-default" href="https://alpik.com.ua/service-11/">
+<link rel="canonical" href="https://alpik.com.ua/montage/">
+<link rel="alternate" hreflang="uk" href="https://alpik.com.ua/montage/">
+<link rel="alternate" hreflang="en" href="https://alpik.com.ua/en/montage/">
+<link rel="alternate" hreflang="x-default" href="https://alpik.com.ua/montage/">
 <!-- i18n-seo:end -->
 </head>
 
@@ -28,6 +28,7 @@
                         <li><a href="/">Головна</a></li>
                         <li><a href="/about/">Про компанію</a></li>
                         <li><a href="/our-services/">Наші послуги</a></li>
+                        <!--<li><a href="/our-projects/">Наші проекти</a></li>-->
                         <li><a href="/contacts/">Контакти</a></li>
                     </ul>
                 </nav>
@@ -39,6 +40,7 @@
                 <li><a href="/">Головна</a></li>
                 <li><a href="/about/">Про компанію</a></li>
                 <li><a href="/our-services/">Наші послуги</a></li>
+                <!--<li><a href="/our-projects/">Наші проекти</a></li>-->
                 <li><a href="/contacts/">Контакти</a></li>
             </ul>
         </nav>
@@ -47,13 +49,13 @@
     <div class="main-header-spacer"></div>
 
     <main>
-        <section class="hero-block" aria-label="Послуга">
-            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('img/11.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
+        <section class="hero-block" aria-label="Монтажні роботи">
+            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/services-03.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
-                <div class="hero-kicker">Послуга 11</div>
-                <h1 class="hero-title">Монтаж сендвіч-панелей і профлиста</h1>
+                <div class="hero-kicker">Послуга</div>
+                <h1 class="hero-title">Монтажні роботи</h1>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
-                <p class="hero-subtitle">Монтуємо сендвіч-панелі та профлист на висоті з точним стикуванням і надійною фіксацією.</p>
+                <p class="hero-subtitle">Виконуємо монтажні роботи на висоті та промислових об’єктах: від водостоків і фасадних систем до світлопрозорих конструкцій.</p>
                 <div class="hero-actions">
                     <a href="/our-services/" class="hero-btn hero-btn-outline">ДО ВСІХ ПОСЛУГ</a>
                     <a href="/contacts/" class="hero-btn hero-btn-fill">ЗАМОВИТИ КОНСУЛЬТАЦІЮ</a>
@@ -61,15 +63,36 @@
             </div>
         </section>
 
-        <section class="service-details" aria-label="Опис послуги">
+        <section class="services-catalog-section" aria-label="Перелік монтажних робіт">
             <div class="container">
-                <h2 class="section-title">11. Монтаж сендвіч-панелей і профлиста</h2>
-                <div class="service-prose">
-                    <p>Монтаж сендвіч-панелей і профнастилу виконується з дотриманням технології швидкомонтованих конструкцій. Панелі з утеплювачем забезпечують тепло- та звукоізоляцію, а профлист із полімерним покриттям — захист від атмосферних впливів.</p>
-                    <p>Роботи виконуються швидко, якісно та з мінімальним впливом на роботу об’єкта.</p>
-                </div>
-                <div class="section-actions">
-                    <a href="/contacts/" class="btn">Написати нам</a>
+                <h2 class="section-title">Перелік монтажних робіт</h2>
+                <p class="services-catalog-lead">Оберіть напрямок монтажу — підкажемо оптимальне рішення і прорахуємо вартість.</p>
+
+                <div class="services-catalog" role="list">
+                    <a class="services-catalog-card" role="listitem" href="/service-03/" aria-label="Монтаж димоходів і повітропроводів">
+                        <div class="services-catalog-num">03</div>
+                        <h3 class="services-catalog-title">Монтаж димоходів і повітропроводів</h3>
+                    </a>
+                    <a class="services-catalog-card" role="listitem" href="/service-07/" aria-label="Монтаж водостічних систем, відливів та систем сніготанення">
+                        <div class="services-catalog-num">07</div>
+                        <h3 class="services-catalog-title">Монтаж водостічних систем, відливів та систем сніготанення</h3>
+                    </a>
+                    <a class="services-catalog-card" role="listitem" href="/service-09/" aria-label="Монтаж вентильованих фасадних систем">
+                        <div class="services-catalog-num">09</div>
+                        <h3 class="services-catalog-title">Монтаж вентильованих фасадних систем</h3>
+                    </a>
+                    <a class="services-catalog-card" role="listitem" href="/service-10/" aria-label="Монтаж світлопрозорих конструкцій">
+                        <div class="services-catalog-num">10</div>
+                        <h3 class="services-catalog-title">Монтаж світлопрозорих конструкцій</h3>
+                    </a>
+                    <a class="services-catalog-card" role="listitem" href="/service-13/" aria-label="Монтаж рекламних конструкцій, навішування банерів">
+                        <div class="services-catalog-num">13</div>
+                        <h3 class="services-catalog-title">Монтаж рекламних конструкцій, навішування банерів</h3>
+                    </a>
+                    <a class="services-catalog-card" role="listitem" href="/service-18/" aria-label="Монтаж декорацій і освітлення">
+                        <div class="services-catalog-num">18</div>
+                        <h3 class="services-catalog-title">Монтаж декорацій і освітлення</h3>
+                    </a>
                 </div>
             </div>
         </section>
@@ -113,12 +136,6 @@
                                 +380 73 126 5006
                             </a>
                         </li>
-                        <li>
-                            <a class="footer-link" href="mailto:roofexpertlv@gmail.com">
-                                <span class="footer-icon" aria-hidden="true">✉</span>
-                                roofexpertlv@gmail.com
-                            </a>
-                        </li>
                     </ul>
                 </div>
 
@@ -128,6 +145,7 @@
                         <li><a class="footer-link" href="/">Головна</a></li>
                         <li><a class="footer-link" href="/about/">Про компанію</a></li>
                         <li><a class="footer-link" href="/our-services/">Наші послуги</a></li>
+                        <!--<li><a class="footer-link" href="/our-projects/">Наші проекти</a></li>-->
                         <li><a class="footer-link" href="/contacts/">Контакти</a></li>
                     </ul>
                 </nav>
@@ -167,4 +185,3 @@
 </body>
 
 </html>
-
