--- a/service-06.html
+++ b/service-06.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Улаштування та ремонт покрівлі — alpiK</title>
+    <title>Ремонт і фарбування дахів — alpiK</title>
     <link rel="stylesheet" href="/style.css">
 <!-- i18n-seo:start -->
 <link rel="canonical" href="https://alpik.com.ua/service-06/">
@@ -48,12 +48,12 @@
 
     <main>
         <section class="hero-block" aria-label="Послуга">
-            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('img/10.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
+            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/10.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
                 <div class="hero-kicker">Послуга 06</div>
-                <h1 class="hero-title">Улаштування та ремонт покрівлі</h1>
+                <h1 class="hero-title">Ремонт і фарбування дахів</h1>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
-                <p class="hero-subtitle">Виконуємо ремонт покрівель, усуваємо протікання та відновлюємо вузли примикань з дотриманням технологій.</p>
+                <p class="hero-subtitle">Виконуємо ремонт покрівель, усуваємо протікання, відновлюємо вузли примикань та фарбуємо покриття для захисту й оновлення вигляду.</p>
                 <div class="hero-actions">
                     <a href="/our-services/" class="hero-btn hero-btn-outline">ДО ВСІХ ПОСЛУГ</a>
                     <a href="/contacts/" class="hero-btn hero-btn-fill">ЗАМОВИТИ КОНСУЛЬТАЦІЮ</a>
@@ -63,10 +63,10 @@
 
         <section class="service-details" aria-label="Опис послуги">
             <div class="container">
-                <h2 class="section-title">06. Улаштування та ремонт покрівлі</h2>
+                <h2 class="section-title">06. Ремонт і фарбування дахів</h2>
                 <div class="service-prose">
-                    <p>Покрівельні роботи виконуються з урахуванням архітектурних і технічних особливостей об’єкта. Ми здійснюємо монтаж нових покрівель, капітальний та поточний ремонт існуючих дахів.</p>
-                    <p>Роботи включають демонтаж пошкоджених ділянок, відновлення несучих конструкцій, монтаж гідро- та теплоізоляції, облаштування вузлів примикання. Застосовуються ПВХ та ТПО мембрани, бітумні матеріали, металочерепиця та профнастил, що забезпечують герметичність і довговічність покрівлі.</p>
+                    <p>Покрівельні роботи виконуються з урахуванням архітектурних і технічних особливостей об’єкта. Ми здійснюємо поточний та капітальний ремонт існуючих дахів, усуваємо протікання та відновлюємо критичні вузли.</p>
+                    <p>Роботи можуть включати демонтаж пошкоджених ділянок, відновлення несучих конструкцій, монтаж гідро- та теплоізоляції, облаштування вузлів примикання. Для захисту та оновлення зовнішнього вигляду виконуємо фарбування покриттів і металевих елементів із застосуванням стійких матеріалів.</p>
                 </div>
                 <div class="section-actions">
                     <a href="/contacts/" class="btn">Написати нам</a>
@@ -113,13 +113,7 @@
                                 +380 73 126 5006
                             </a>
                         </li>
-                        <li>
-                            <a class="footer-link" href="mailto:roofexpertlv@gmail.com">
-                                <span class="footer-icon" aria-hidden="true">✉</span>
-                                roofexpertlv@gmail.com
-                            </a>
-                        </li>
-                    </ul>
+</ul>
                 </div>
 
                 <nav class="footer-col footer-nav" aria-label="Категорії">
