--- a/solar-panels.html
+++ b/solar-panels.html
@@ -1,16 +1,16 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="uk">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ремонт, обробка, облицювання, фарбування і гідрофобізація фасадів — alpiK</title>
+    <title>Встановлення сонячних панелей — alpiK</title>
     <link rel="stylesheet" href="/style.css">
 <!-- i18n-seo:start -->
-<link rel="canonical" href="https://alpik.com.ua/service-01/">
-<link rel="alternate" hreflang="uk" href="https://alpik.com.ua/service-01/">
-<link rel="alternate" hreflang="en" href="https://alpik.com.ua/en/service-01/">
-<link rel="alternate" hreflang="x-default" href="https://alpik.com.ua/service-01/">
+<link rel="canonical" href="https://alpik.com.ua/solar-panels/">
+<link rel="alternate" hreflang="uk" href="https://alpik.com.ua/solar-panels/">
+<link rel="alternate" hreflang="en" href="https://alpik.com.ua/en/solar-panels/">
+<link rel="alternate" hreflang="x-default" href="https://alpik.com.ua/solar-panels/">
 <!-- i18n-seo:end -->
 </head>
 
@@ -28,6 +28,7 @@
                         <li><a href="/">Головна</a></li>
                         <li><a href="/about/">Про компанію</a></li>
                         <li><a href="/our-services/">Наші послуги</a></li>
+                        <!--<li><a href="/our-projects/">Наші проекти</a></li>-->
                         <li><a href="/contacts/">Контакти</a></li>
                     </ul>
                 </nav>
@@ -39,6 +40,7 @@
                 <li><a href="/">Головна</a></li>
                 <li><a href="/about/">Про компанію</a></li>
                 <li><a href="/our-services/">Наші послуги</a></li>
+                <!--<li><a href="/our-projects/">Наші проекти</a></li>-->
                 <li><a href="/contacts/">Контакти</a></li>
             </ul>
         </nav>
@@ -48,12 +50,12 @@
 
     <main>
         <section class="hero-block" aria-label="Послуга">
-            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/1.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
+            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/16.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
-                <div class="hero-kicker">Послуга 01</div>
-                <h1 class="hero-title">Ремонт, обробка, облицювання, фарбування і гідрофобізація фасадів</h1>
+                <div class="hero-kicker">Послуга</div>
+                <h1 class="hero-title">Встановлення сонячних панелей</h1>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
-                <p class="hero-subtitle">Оновлюємо фасади, відновлюємо захист і покращуємо зовнішній вигляд будівель з дотриманням технологій та безпеки.</p>
+                <p class="hero-subtitle">Підбираємо рішення під ваш об’єкт та монтуємо сонячні панелі на дахах і конструкціях: кріплення, розміщення, акуратне підключення.</p>
                 <div class="hero-actions">
                     <a href="/our-services/" class="hero-btn hero-btn-outline">ДО ВСІХ ПОСЛУГ</a>
                     <a href="/contacts/" class="hero-btn hero-btn-fill">ЗАМОВИТИ КОНСУЛЬТАЦІЮ</a>
@@ -63,11 +65,14 @@
 
         <section class="service-details" aria-label="Опис послуги">
             <div class="container">
-                <h2 class="section-title">01. Ремонт, обробка, облицювання, фарбування і гідрофобізація фасадів</h2>
+                <h2 class="section-title">Що входить у роботу</h2>
                 <div class="service-prose">
-                    <p>Ми виконуємо повний комплекс фасадних робіт будь-якої складності з використанням сучасних технологій та сертифікованих матеріалів. Роботи розпочинаються з професійного технічного обстеження фасаду, під час якого визначається стан несучих і оздоблювальних шарів, рівень зношення, наявність тріщин, відшарувань, корозійних уражень та біологічних забруднень.</p>
-                    <p>Підготовчий етап включає механічне або хімічне очищення поверхонь від пилу, бруду, висолів, старих лакофарбових покриттів і слабких ділянок штукатурки. Далі виконується локальний або суцільний ремонт фасаду: заповнення тріщин ремонтними сумішами, відновлення геометрії поверхонь, армування проблемних зон, вирівнювання та підготовка основи під фінішну обробку.</p>
-                    <p>Для облицювання та оздоблення ми застосовуємо керамограніт, клінкерну плитку, фасадні панелі, декоративні штукатурки, а для фарбування — високоякісні атмосферостійкі фарби з високою паропроникністю. Завершальним етапом є гідрофобізація фасаду спеціальними водовідштовхувальними складами, що захищають будівлю від вологи, замерзання, утворення грибка та передчасного руйнування, значно подовжуючи термін експлуатації фасаду.</p>
+                    <ul>
+                        <li>Оцінка об’єкта та підбір рішення</li>
+                        <li>Монтаж кріплень та панелей</li>
+                        <li>Акуратне прокладання кабелів</li>
+                        <li>Консультація та прорахунок</li>
+                    </ul>
                 </div>
                 <div class="section-actions">
                     <a href="/contacts/" class="btn">Написати нам</a>
@@ -114,7 +119,7 @@
                                 +380 73 126 5006
                             </a>
                         </li>
-</ul>
+                    </ul>
                 </div>
 
                 <nav class="footer-col footer-nav" aria-label="Категорії">
@@ -123,6 +128,7 @@
                         <li><a class="footer-link" href="/">Головна</a></li>
                         <li><a class="footer-link" href="/about/">Про компанію</a></li>
                         <li><a class="footer-link" href="/our-services/">Наші послуги</a></li>
+                        <!--<li><a class="footer-link" href="/our-projects/">Наші проекти</a></li>-->
                         <li><a class="footer-link" href="/contacts/">Контакти</a></li>
                     </ul>
                 </nav>
@@ -162,4 +168,3 @@
 </body>
 
 </html>
-
