--- a/en/montage.html
+++ b/en/montage.html
@@ -1,16 +1,16 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ventilated facade systems installation — alpiK</title>
+    <title>Installation works — alpiK</title>
     <link rel="stylesheet" href="/style.css">
 <!-- i18n-seo:start -->
-<link rel="canonical" href="https://alpik.com.ua/en/service-09/">
-<link rel="alternate" hreflang="uk" href="https://alpik.com.ua/service-09/">
-<link rel="alternate" hreflang="en" href="https://alpik.com.ua/en/service-09/">
-<link rel="alternate" hreflang="x-default" href="https://alpik.com.ua/service-09/">
+<link rel="canonical" href="https://alpik.com.ua/en/montage/">
+<link rel="alternate" hreflang="uk" href="https://alpik.com.ua/montage/">
+<link rel="alternate" hreflang="en" href="https://alpik.com.ua/en/montage/">
+<link rel="alternate" hreflang="x-default" href="https://alpik.com.ua/montage/">
 <!-- i18n-seo:end -->
 </head>
 
@@ -28,6 +28,7 @@
                         <li><a href="/en/">Home</a></li>
                         <li><a href="/en/about/">About</a></li>
                         <li><a href="/en/our-services/">Services</a></li>
+                        <!--<li><a href="/en/our-projects/">Projects</a></li>-->
                         <li><a href="/en/contacts/">Contacts</a></li>
                     </ul>
                 </nav>
@@ -39,6 +40,7 @@
                 <li><a href="/en/">Home</a></li>
                 <li><a href="/en/about/">About</a></li>
                 <li><a href="/en/our-services/">Services</a></li>
+                <!--<li><a href="/en/our-projects/">Projects</a></li>-->
                 <li><a href="/en/contacts/">Contacts</a></li>
             </ul>
         </nav>
@@ -47,13 +49,13 @@
     <div class="main-header-spacer"></div>
 
     <main>
-        <section class="hero-block" aria-label="Service">
-            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/8.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
+        <section class="hero-block" aria-label="Installation works">
+            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/services-03.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
-                <div class="hero-kicker">Service 09</div>
-                <h1 class="hero-title">Ventilated facade systems installation</h1>
+                <div class="hero-kicker">Service</div>
+                <h1 class="hero-title">Installation works</h1>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
-                <p class="hero-subtitle">Installation of substructures and cladding for durable and energy‑efficient facades.</p>
+                <p class="hero-subtitle">We deliver installation works at height and on industrial sites: from gutters and facade systems to translucent structures.</p>
                 <div class="hero-actions">
                     <a href="/en/our-services/" class="hero-btn hero-btn-outline">ALL SERVICES</a>
                     <a href="/en/contacts/" class="hero-btn hero-btn-fill">REQUEST A CONSULTATION</a>
@@ -61,15 +63,36 @@
             </div>
         </section>
 
-        <section class="service-details" aria-label="Service details">
+        <section class="services-catalog-section" aria-label="Installation services">
             <div class="container">
-                <h2 class="section-title">09. Ventilated facade systems installation</h2>
-                <div class="service-prose">
-                    <p>We install ventilated facades: substructure, insulation, wind protection and cladding panels. Ventilated systems improve moisture management and energy efficiency.</p>
-                    <p>We ensure correct geometry, reliable fasteners and safe work at height, including junctions, corners and penetrations.</p>
-                </div>
-                <div class="section-actions">
-                    <a href="/en/contacts/" class="btn">Contact us</a>
+                <h2 class="section-title">Installation services</h2>
+                <p class="services-catalog-lead">Choose the type of installation — we’ll recommend the best approach and provide an estimate.</p>
+
+                <div class="services-catalog" role="list">
+                    <a class="services-catalog-card" role="listitem" href="/en/service-03/" aria-label="Installation of chimneys & air ducts">
+                        <div class="services-catalog-num">03</div>
+                        <h3 class="services-catalog-title">Installation of chimneys & air ducts</h3>
+                    </a>
+                    <a class="services-catalog-card" role="listitem" href="/en/service-07/" aria-label="Gutters, flashings & snow-melting systems">
+                        <div class="services-catalog-num">07</div>
+                        <h3 class="services-catalog-title">Gutters, flashings & snow-melting systems</h3>
+                    </a>
+                    <a class="services-catalog-card" role="listitem" href="/en/service-09/" aria-label="Ventilated facade systems installation">
+                        <div class="services-catalog-num">09</div>
+                        <h3 class="services-catalog-title">Ventilated facade systems installation</h3>
+                    </a>
+                    <a class="services-catalog-card" role="listitem" href="/en/service-10/" aria-label="Translucent structures installation">
+                        <div class="services-catalog-num">10</div>
+                        <h3 class="services-catalog-title">Translucent structures installation</h3>
+                    </a>
+                    <a class="services-catalog-card" role="listitem" href="/en/service-13/" aria-label="Advertising structures & banner installation">
+                        <div class="services-catalog-num">13</div>
+                        <h3 class="services-catalog-title">Advertising structures & banner installation</h3>
+                    </a>
+                    <a class="services-catalog-card" role="listitem" href="/en/service-18/" aria-label="Decorations & lighting installation">
+                        <div class="services-catalog-num">18</div>
+                        <h3 class="services-catalog-title">Decorations & lighting installation</h3>
+                    </a>
                 </div>
             </div>
         </section>
@@ -113,7 +136,7 @@
                                 +380 73 126 5006
                             </a>
                         </li>
-</ul>
+                    </ul>
                 </div>
 
                 <nav class="footer-col footer-nav" aria-label="Pages">
@@ -122,6 +145,7 @@
                         <li><a class="footer-link" href="/en/">Home</a></li>
                         <li><a class="footer-link" href="/en/about/">About</a></li>
                         <li><a class="footer-link" href="/en/our-services/">Services</a></li>
+                        <!--<li><a class="footer-link" href="/en/our-projects/">Projects</a></li>-->
                         <li><a class="footer-link" href="/en/contacts/">Contacts</a></li>
                     </ul>
                 </nav>
@@ -162,4 +186,3 @@
 </body>
 
 </html>
-
