--- a/en/service-06.html
+++ b/en/service-06.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roof installation & repair — alpiK</title>
+    <title>Roof repair & painting — alpiK</title>
     <link rel="stylesheet" href="/style.css">
 <!-- i18n-seo:start -->
 <link rel="canonical" href="https://alpik.com.ua/en/service-06/">
@@ -48,12 +48,12 @@
 
     <main>
         <section class="hero-block" aria-label="Service">
-            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('img/10.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
+            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/10.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
                 <div class="hero-kicker">Service 06</div>
-                <h1 class="hero-title">Roof installation & repair</h1>
+                <h1 class="hero-title">Roof repair & painting</h1>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
-                <p class="hero-subtitle">We repair roofs, eliminate leaks and restore junction nodes with the right technology.</p>
+                <p class="hero-subtitle">We repair roofs, eliminate leaks and paint roof elements to protect and refresh the appearance.</p>
                 <div class="hero-actions">
                     <a href="/en/our-services/" class="hero-btn hero-btn-outline">ALL SERVICES</a>
                     <a href="/en/contacts/" class="hero-btn hero-btn-fill">REQUEST A CONSULTATION</a>
@@ -63,10 +63,10 @@
 
         <section class="service-details" aria-label="Service details">
             <div class="container">
-                <h2 class="section-title">06. Roof installation & repair</h2>
+                <h2 class="section-title">06. Roof repair & painting</h2>
                 <div class="service-prose">
-                    <p>Roofing works are performed with the architectural and technical specifics of the object in mind. We install new roofs and perform major or routine repairs of existing ones.</p>
-                    <p>The scope includes dismantling damaged areas, restoring supporting structures, installing waterproofing and thermal insulation, and rebuilding junction nodes. We work with PVC/TPO membranes, bituminous materials, metal tiles and corrugated/profled sheet to ensure long‑term tightness and durability.</p>
+                    <p>Roof works are performed with the architectural and technical specifics of the facility in mind. We provide routine and major repairs for existing roofs, eliminate leaks and restore critical junctions.</p>
+                    <p>The scope may include dismantling damaged areas, restoring supporting structures, installing waterproofing and thermal insulation, and rebuilding junction nodes. To protect and renew the exterior, we also paint roof coatings and metal elements using durable systems suitable for outdoor exposure.</p>
                 </div>
                 <div class="section-actions">
                     <a href="/en/contacts/" class="btn">Contact us</a>
@@ -113,13 +113,7 @@
                                 +380 73 126 5006
                             </a>
                         </li>
-                        <li>
-                            <a class="footer-link" href="mailto:roofexpertlv@gmail.com">
-                                <span class="footer-icon" aria-hidden="true">✉</span>
-                                roofexpertlv@gmail.com
-                            </a>
-                        </li>
-                    </ul>
+</ul>
                 </div>
 
                 <nav class="footer-col footer-nav" aria-label="Pages">
