--- a/our-services.html
+++ b/our-services.html
@@ -89,9 +89,9 @@
                         <h3 class="services-catalog-title">Комплексний ремонт елеваторів; очищення та ремонт силосів</h3>
                     </a>
 
-                    <a class="services-catalog-card" role="listitem" href="/service-06/" aria-label="Улаштування та ремонт покрівлі">
+                    <a class="services-catalog-card" role="listitem" href="/service-06/" aria-label="Ремонт і фарбування дахів">
                         <div class="services-catalog-num">06</div>
-                        <h3 class="services-catalog-title">Улаштування та ремонт покрівлі</h3>
+                        <h3 class="services-catalog-title">Ремонт і фарбування дахів</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/service-07/" aria-label="Монтаж водостічних систем, відливів та систем сніготанення">
                         <div class="services-catalog-num">07</div>
@@ -108,14 +108,6 @@
                     <a class="services-catalog-card" role="listitem" href="/service-10/" aria-label="Монтаж світлопрозорих конструкцій">
                         <div class="services-catalog-num">10</div>
                         <h3 class="services-catalog-title">Монтаж світлопрозорих конструкцій</h3>
-                    </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-11/" aria-label="Монтаж сендвіч-панелей і профлиста">
-                        <div class="services-catalog-num">11</div>
-                        <h3 class="services-catalog-title">Монтаж сендвіч-панелей і профлиста</h3>
-                    </a>
-                    <a class="services-catalog-card" role="listitem" href="/service-12/" aria-label="Теплоізоляція та утеплення будівель і квартир">
-                        <div class="services-catalog-num">12</div>
-                        <h3 class="services-catalog-title">Теплоізоляція та утеплення будівель і квартир</h3>
                     </a>
                     <a class="services-catalog-card" role="listitem" href="/service-13/" aria-label="Монтаж рекламних конструкцій, навішування банерів">
                         <div class="services-catalog-num">13</div>
@@ -185,13 +177,7 @@
                                 +380 73 126 5006
                             </a>
                         </li>
-                        <li>
-                            <a class="footer-link" href="mailto:roofexpertlv@gmail.com">
-                                <span class="footer-icon" aria-hidden="true">✉</span>
-                                roofexpertlv@gmail.com
-                            </a>
-                        </li>
-                    </ul>
+</ul>
                 </div>
 
                 <nav class="footer-col footer-nav" aria-label="Категорії">
