--- a/repair.html
+++ b/repair.html
@@ -1,16 +1,16 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="uk">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Теплоізоляція та утеплення будівель і квартир — alpiK</title>
+    <title>Ремонтні роботи — alpiK</title>
     <link rel="stylesheet" href="/style.css">
 <!-- i18n-seo:start -->
-<link rel="canonical" href="https://alpik.com.ua/service-12/">
-<link rel="alternate" hreflang="uk" href="https://alpik.com.ua/service-12/">
-<link rel="alternate" hreflang="en" href="https://alpik.com.ua/en/service-12/">
-<link rel="alternate" hreflang="x-default" href="https://alpik.com.ua/service-12/">
+<link rel="canonical" href="https://alpik.com.ua/repair/">
+<link rel="alternate" hreflang="uk" href="https://alpik.com.ua/repair/">
+<link rel="alternate" hreflang="en" href="https://alpik.com.ua/en/repair/">
+<link rel="alternate" hreflang="x-default" href="https://alpik.com.ua/repair/">
 <!-- i18n-seo:end -->
 </head>
 
@@ -28,6 +28,7 @@
                         <li><a href="/">Головна</a></li>
                         <li><a href="/about/">Про компанію</a></li>
                         <li><a href="/our-services/">Наші послуги</a></li>
+                        <!--<li><a href="/our-projects/">Наші проекти</a></li>-->
                         <li><a href="/contacts/">Контакти</a></li>
                     </ul>
                 </nav>
@@ -39,6 +40,7 @@
                 <li><a href="/">Головна</a></li>
                 <li><a href="/about/">Про компанію</a></li>
                 <li><a href="/our-services/">Наші послуги</a></li>
+                <!--<li><a href="/our-projects/">Наші проекти</a></li>-->
                 <li><a href="/contacts/">Контакти</a></li>
             </ul>
         </nav>
@@ -47,13 +49,13 @@
     <div class="main-header-spacer"></div>
 
     <main>
-        <section class="hero-block" aria-label="Послуга">
-            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('img/12.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
+        <section class="hero-block" aria-label="Ремонтні роботи">
+            <div class="hero-bg" style="background: linear-gradient(120deg, rgba(0,0,0,0.78) 0%, rgba(0,0,0,0.64) 62%, rgba(255,230,0,0.32) 100%), url('/img/2.jpg') center/cover no-repeat; filter: grayscale(1);"></div>
             <div class="container hero-inner">
-                <div class="hero-kicker">Послуга 12</div>
-                <h1 class="hero-title">Теплоізоляція та утеплення будівель і квартир</h1>
+                <div class="hero-kicker">Послуга</div>
+                <h1 class="hero-title">Ремонтні роботи</h1>
                 <div class="hero-divider" aria-hidden="true"><span></span></div>
-                <p class="hero-subtitle">Підбираємо матеріали й технологію утеплення та виконуємо роботи з урахуванням теплотехніки та довговічності.</p>
+                <p class="hero-subtitle">Виконуємо ремонт і відновлення конструкцій на висоті: фасади, димові труби, силоси, дахи та інші елементи.</p>
                 <div class="hero-actions">
                     <a href="/our-services/" class="hero-btn hero-btn-outline">ДО ВСІХ ПОСЛУГ</a>
                     <a href="/contacts/" class="hero-btn hero-btn-fill">ЗАМОВИТИ КОНСУЛЬТАЦІЮ</a>
@@ -61,15 +63,32 @@
             </div>
         </section>
 
-        <section class="service-details" aria-label="Опис послуги">
+        <section class="services-catalog-section" aria-label="Перелік ремонтних робіт">
             <div class="container">
-                <h2 class="section-title">12. Теплоізоляція та утеплення будівель і квартир</h2>
-                <div class="service-prose">
-                    <p>Ми пропонуємо комплексні рішення з утеплення житлових і промислових будівель. Застосовуються сучасні теплоізоляційні матеріали: мінеральна вата, пінополістирол, пінополіуретан.</p>
-                    <p>Роботи виконуються з дотриманням технології паро- та гідроізоляції, що забезпечує комфортний мікроклімат і зменшення енерговитрат.</p>
-                </div>
-                <div class="section-actions">
-                    <a href="/contacts/" class="btn">Написати нам</a>
+                <h2 class="section-title">Перелік ремонтних робіт</h2>
+                <p class="services-catalog-lead">Оберіть напрямок ремонту — підкажемо оптимальне рішення і прорахуємо вартість.</p>
+
+                <div class="services-catalog" role="list">
+                    <a class="services-catalog-card" role="listitem" href="/service-01/" aria-label="Ремонт, обробка, облицювання, фарбування і гідрофобізація фасадів">
+                        <div class="services-catalog-num">01</div>
+                        <h3 class="services-catalog-title">Ремонт, обробка, облицювання, фарбування і гідрофобізація фасадів</h3>
+                    </a>
+                    <a class="services-catalog-card" role="listitem" href="/service-02/" aria-label="Ремонт і модернізація димових труб">
+                        <div class="services-catalog-num">02</div>
+                        <h3 class="services-catalog-title">Ремонт і модернізація димових труб</h3>
+                    </a>
+                    <a class="services-catalog-card" role="listitem" href="/service-05/" aria-label="Комплексний ремонт елеваторів; очищення та ремонт силосів">
+                        <div class="services-catalog-num">05</div>
+                        <h3 class="services-catalog-title">Комплексний ремонт елеваторів; очищення та ремонт силосів</h3>
+                    </a>
+                    <a class="services-catalog-card" role="listitem" href="/service-06/" aria-label="Ремонт і фарбування дахів">
+                        <div class="services-catalog-num">06</div>
+                        <h3 class="services-catalog-title">Ремонт і фарбування дахів</h3>
+                    </a>
+                    <a class="services-catalog-card" role="listitem" href="/service-17/" aria-label="Герметизація міжпанельних швів">
+                        <div class="services-catalog-num">17</div>
+                        <h3 class="services-catalog-title">Герметизація міжпанельних швів</h3>
+                    </a>
                 </div>
             </div>
         </section>
@@ -113,12 +132,6 @@
                                 +380 73 126 5006
                             </a>
                         </li>
-                        <li>
-                            <a class="footer-link" href="mailto:roofexpertlv@gmail.com">
-                                <span class="footer-icon" aria-hidden="true">✉</span>
-                                roofexpertlv@gmail.com
-                            </a>
-                        </li>
                     </ul>
                 </div>
 
@@ -128,6 +141,7 @@
                         <li><a class="footer-link" href="/">Головна</a></li>
                         <li><a class="footer-link" href="/about/">Про компанію</a></li>
                         <li><a class="footer-link" href="/our-services/">Наші послуги</a></li>
+                        <!--<li><a class="footer-link" href="/our-projects/">Наші проекти</a></li>-->
                         <li><a class="footer-link" href="/contacts/">Контакти</a></li>
                     </ul>
                 </nav>
@@ -167,4 +181,3 @@
 </body>
 
 </html>
-
